# Personalized-Learning-Assistant-ai-agent

./: .env.example  .gitignore.txt  README.md  package-lock.json  pyproject.toml  requirements.txt
docs/: agents.md  api.md  architecture.md
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.jsx
frontend/src/components/: Dashboard.jsx  ExplanationView.jsx  QuizView.jsx  SchedulerView.jsx
frontend/src/styles/: main.css
frontend/web/templates/static/styles/: main.css
scripts/: setup_dev.sh
src/: evalset916772.evalset.json  main.py
src/agents/backend/: base_agent.py  explanation_agent.py  quiz_agent.py  scheduler_agent.py
src/api/: __init__.py  routes.py  schemas.py
src/core/: adaptive_engine.py  agent_manager.py  feedback.py
src/memory/: memory_bank.py
src/models/: content_metadata.py  user_profile.py
src/services/: session_service.py
src/web/: app.py
src/web/templates/: base.html
tests/: test_agent_manager.py  test_explanation_agent.py  test_quiz_agent.py  test_scheduler_agent.py
